# Topic-Explorer-App

./: Cargo.toml  LICENSE  README.md  curl_output.json
.github/workflows/: release.yml
.graphify/: .graphify_detect.json  .graphify_labels.json  GRAPH_REPORT.md  branch.json  graph.json  manifest.json  scope.json  worktree.json
.graphify/cache/: stat-index.json
src/: main.rs
src/ai/: client.rs  json_utils.rs  mod.rs  providers.rs  services.rs
src/db/: mod.rs  models.rs  schema.rs
src/routes/: ai_routes.rs  concepts.rs  health.rs  mod.rs  notes.rs  search.rs  settings.rs  topics.rs  workspaces.rs
static/: explore.html  index.html  notes.html  settings.html
static/css/: style.css
static/js/: app.js  dashboard.js  explore.js
