[package]
name = "topic-explorer"
version = "0.1.0"
edition = "2021"
description = "AI-powered Topic Explorer — learn anything with intelligent concept mapping"

[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-cors = "0.7"
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
dirs = "5"
env_logger = "0.11"
log = "0.4"

[package.metadata.bundle]
name = "Topic Explorer"
identifier = "com.topicexplorer.app"
icon = ["static/assets/logo.png"]
category = "Education"
short_description = "AI-powered Topic Explorer"
copyright = "Copyright (c) 2026 Topic Explorer"
